<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="details"
            type="com.agilie.adssampleapp.domain.model.MovieDetails" />

        <variable
            name="movie"
            type="com.agilie.adssampleapp.domain.model.Movie" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/ablHeader"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/ctlHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:title="@{movie.title}">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivHeader"
                            android:layout_width="0dp"
                            android:layout_height="203dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:loadImage="@{@string/base_url_back_drop(movie.backDrop)}" />

                        <View
                            android:id="@+id/viewPosterFilter"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/movie_poster_foreground_default"
                            app:layout_constraintBottom_toBottomOf="@+id/ivHeader"
                            app:layout_constraintEnd_toEndOf="@+id/ivHeader"
                            app:layout_constraintStart_toStartOf="@+id/ivHeader"
                            app:layout_constraintTop_toTopOf="@+id/ivHeader" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivPoster"
                        android:layout_width="110dp"
                        android:layout_height="161dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:loadImage="@{@string/base_url_poster(movie.poster)}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvGenres"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{movie.genresString}"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPoster"
                        app:layout_constraintTop_toTopOf="@+id/ivPoster" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvReleaseDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@{@string/release_date(movie.release)}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPoster"
                        app:layout_constraintTop_toBottomOf="@+id/tvGenres"
                        tools:text="Release: 2018-12-07" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvVotes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@{@string/average_vote(movie.averageVote)}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPoster"
                        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
                        tools:text="Average vote: 6.9" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvHomePage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:autoLink="web"
                        android:maxLines="1"
                        android:text="@{details.homepage}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPoster"
                        app:layout_constraintTop_toBottomOf="@+id/tvVotes"
                        tools:text="Home page" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBuyTicket"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/bg_btn_buy_tickets"
                        android:text="@string/buy_tickets_btn"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPoster" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCastTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/cast_title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/ivPoster"
                        app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCast"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvCastTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tvCastTitle"
                        tools:text="Jason Momoa, Amber Heard, Willem Dafoe, Patrick Wilson, Dolph Lundgren, Yahya Abdul-Mateen II, Nicole Kidman, Temuera Morrison, Ludi Lin, Graham McTavish, Djimon Hounsou" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDescriptionTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/description_title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/ivPoster"
                        app:layout_constraintTop_toBottomOf="@+id/tvCast" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:text="@{movie.overview}"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />

                    <LinearLayout
                        android:id="@+id/llAdContainer"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>
